--- a/3350-dual-vcf/analysis.tex
+++ b/3350-dual-vcf/analysis.tex
@@ -36,7 +36,6 @@ A verbose but hopefully useful and correct analysis of the CEM3350 and AS3350 VC
   iq = Q(aV_{in} - V_{bp})
 \end{equation}
 
-
 \begin{equation}
   i1 = F(bV_{in} - V_{lp})
 \end{equation}
@@ -108,5 +107,77 @@ Calculate Band Pass transfer function.
 \begin{equation}
   H(s) = \frac{s\frac{C}{F}{(b + \frac{Q}{F}a)}}{\frac{s^2}{{(\frac{F}{C})}^2} + 2\frac{s}{\frac{F}{C}}\frac{Q}{2F} + 1} \\
 \end{equation}
+
+\section{With Q Enhancement}
+
+The Q enhancement is just feeding a specific amount of the BandPass output back into the input.
+
+\subsection{Notations}
+
+\begin{description}
+\item[F] is the the frequency control variable
+\item[Q] is the the Q control variable
+\item[x] is the the Q enhancement feedback gain
+\item[a] is the variable gain input scaling factor
+\item[b] is the fixed gain input scaling factor
+\end{description}
+
+\begin{equation}
+  iq = Q(aV_{in} - V_{bp})
+\end{equation}
+
+\begin{equation}
+  i1 = F(bV_{in} + xV_{bp} - V_{lp})
+\end{equation}
+
+\begin{equation}
+  i2 = FV_{bp}
+\end{equation}
+
+\begin{equation}
+  \hat{V}_{bp} = \frac{\hat{I}_1 + \hat{I}_q}{sC}
+\end{equation}
+
+\begin{equation}
+  \hat{V}_{lp} = \frac{\hat{I}_2}{sC}
+\end{equation}
+
+Simplify Vbp into terms of Vlp and Vin.
+
+\begin{equation*}
+\begin{split}
+  \hat{V}_{bp} & = \frac{\hat{I}_1 + \hat{I}_q}{sC} \\
+  sC\hat{V}_{bp} & = \hat{I}_1 + \hat{I}_q \\
+  sC\hat{V}_{bp} & = Fb\hat{V}_{in} + Fx\hat{V}_{bp} - F\hat{V}_{lp} + Qa\hat{V}_{in} - Q\hat{V}_{bp} \\
+  sC\hat{V}_{bp} + Q\hat{V}_{bp} - Fx\hat{V}_{bp} & = Fb\hat{V}_{in} - F\hat{V}_{lp} + Qa\hat{V}_{in}\\
+  \hat{V}_{bp}(sC + Q - Fx) & = \hat{V}_{in}(Fb + Qa) - F\hat{V}_{lp} \\
+\end{split}
+\end{equation*}
+
+\begin{equation}
+  \hat{V}_{bp} = \frac{\hat{V}_{in}(Fb + Qa) - F\hat{V}_{lp}}{sC + Q - Fx}
+\end{equation}
+
+Get Vlp in terms of Vin and calculate Low Pass transfer function.
+
+\begin{equation*}
+\begin{split}
+  \hat{V}_{lp} & = \frac{\hat{I}_2}{sC} \\
+  \hat{V}_{lp} & = \frac{F\hat{V}_{bp}}{sC} \\
+  sC\hat{V}_{lp} & = F\hat{V}_{bp} \\
+  sC\hat{V}_{lp} & = \frac{\hat{V}_{in}(F^2b + FQa) - F^2\hat{V}_{lp}}{sC + Q - Fx} \\
+  \hat{V}_{lp}(s^2C^2 + sCQ - sCFx) & = \hat{V}_{in}(F^2b + FQa) - F^2\hat{V}_{lp} \\
+  \hat{V}_{lp}(s^2C^2 + sCQ - sCFx) + F^2\hat{V}_{lp} & = \hat{V}_{in}(F^2b + FQa) \\
+  \hat{V}_{lp}(s^2C^2 + sCQ -sCFx + F^2) & = \hat{V}_{in}(F^2b + FQa) \\
+  \frac{\hat{V}_{lp}}{\hat{V}_{in}} & = \frac{F^2b + FQa}{s^2C^2 + sCQ - sCFx + F^2} \\
+  & = \frac{F^2b + FQa}{s^2C^2 + sC(Q - Fx) + F^2} \\
+  & = \frac{b + a\frac{Q}{F}}{s^2{(\frac{C}{F})}^2 + s\frac{C}{F}\frac{Q - xF}{F} + 1} \\
+\end{split}
+\end{equation*}
+
+\begin{equation}
+  H(s) = \frac{b + a\frac{Q}{F}}{\frac{s^2}{{(\frac{F}{C})}^2} + 2\frac{s}{\frac{F}{C}}\frac{(\frac{Q}{F} - x)}{2} + 1}
+\end{equation}
+
 
 \end{document}
